# tetratile

./: .coveragerc  .gitignore  .pre-commit-config.yaml  AGENTS.md  Pipfile  README.md  pyproject.toml
docs/: BACKLOG.md  PLAN.md  mathematics.rst
pysirtet/: pysirtet
src/tetratile/: __init__.py  __main__.py  _versor.py  agent.py  agent_runner.py  config.py  config_ui.py  event_log.py  input_agent.py  input_handler.py  input_human.py  log_viewer.py  output.py
test/: test_pysirtet.py
tests/integration/: conftest.py  test_agent_runner.py  test_board.py  test_config.py  test_event_logging.py  test_game_flow.py  test_observation.py  test_rotation_edge.py  test_rotation_free.py  test_row_removal.py  test_srs_rotation.py  test_translation.py
tests/unit/: test_pysirtet.py  test_tetratile.py
tetratile/: tetratile  tetratile.py  tetratile.toml
