[project]
name = "tetratile"
dynamic = ["version"]
authors = [
  { name="Justin Findlay", email="justin@findlay.space" },
]
description = "Tetromino tessellation game"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.0",
]

[project.urls]
"Homepage" = "https://github.com/jfindlay/tetratile/"
"Repository" = "https://github.com/jfindlay/tetratile/"
"Bug Tracker" = "https://github.com/jfindlay/tetratile/issues/"

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
    "ruff",
    "pylint",
    "mypy",
    "pyupgrade",
]

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.targets.wheel]
packages = ["src/tetratile"]
include = ["src/tetratile/py.typed"]

[tool.hatch.build.targets.sdist]
include = ["src/"]

[tool.pyupgrade]
keep-percent-format = true

[tool.mypy]
python_version = "3.12"
strict = true
warn_unused_configs = true
show_error_codes = true
disable_error_code = ["override"]

[tool.ruff]
line-length = 128
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "C4", "SIM"]


[tool.pylint."MESSAGES CONTROL"]
disable = [
    "duplicate-code",
    "logging-fstring-interpolation",
    "redefined-builtin",
    "too-few-public-methods",
    "too-many-arguments",
    "useless-suppression",
]

[tool.pylint.FORMAT]
max-line-length = 128
