[project]
name = "tetratile"
dynamic = ["version"]
authors = [
    { name = "Justin Findlay", email = "justin@findlay.space" },
]
description = "Tetromino tessellation game"
readme = "README.md"
requires-python = ">=3.12"
license = "GPL-3.0-or-later"
classifiers = [
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
]
dependencies = [
    "pydantic>=2.0",
]

[project.scripts]
tetratile = "tetratile.__main__:main"

[project.urls]
"Homepage" = "https://github.com/jfindlay/tetratile/"
"Repository" = "https://github.com/jfindlay/tetratile/"
"Bug Tracker" = "https://github.com/jfindlay/tetratile/issues/"

[dependency-groups]
dev = ["pytest", "pytest-mock", "pytest-cov", "pyfakefs", "mypy", "ruff"]

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.targets.wheel]
packages = ["src/tetratile"]

# ---------------------------------------------------------------------------
# Type checking
# ---------------------------------------------------------------------------

[tool.mypy]
python_version = "3.12"
strict = true

# ---------------------------------------------------------------------------
# Linting and formatting (ruff)
# ---------------------------------------------------------------------------

[tool.ruff]
line-length = 100

[tool.ruff.lint]
# E/W: pycodestyle  F: pyflakes  I: isort  N: pep8-naming
# UP: pyupgrade     B: flake8-bugbear  C4: flake8-comprehensions
# SIM: flake8-simplify  TID: flake8-tidy-imports  RUF: ruff-native
select = ["E", "W", "F", "I", "N", "UP", "B", "C4", "SIM", "TID", "RUF"]
ignore = [
    "E501",   # line too long — handled by the formatter
    "N817",   # Decimal as D — deliberate abbreviation for half-integer arithmetic
    "RUF002", # ambiguous Unicode in docstrings — intentional mathematical notation
    "RUF003", # ambiguous Unicode in comments — intentional mathematical notation
]

[tool.ruff.format]
# Black-compatible formatting defaults; explicit for clarity.
quote-style = "double"
indent-style = "space"
line-ending = "auto"

# ---------------------------------------------------------------------------
# Testing
# ---------------------------------------------------------------------------

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=tetratile --cov-report=term-missing"

# Coverage configuration lives in .coveragerc (omit patterns require
# file-based config to be applied before pytest-cov initialises coverage).

# ---------------------------------------------------------------------------
# Tox
# ---------------------------------------------------------------------------

[tool.tox]
requires = ["tox-uv"]
isolated_build = true
labels = { check = [
    "build",
    "test",
    "check_type",
    "check_lint",
], format = ["fix_format"] }

[tool.tox.env.build]
package = "wheel"
wheel_build_env = ".pkg"

[tool.tox.env.test]
dependency_groups = ["dev"]
commands = [["pytest", "tests/"]]

[tool.tox.env.check_type]
dependency_groups = ["dev"]
commands = [["mypy", "src/", "tests/"]]

[tool.tox.env.check_lint]
dependency_groups = ["dev"]
commands = [
    ["ruff", "check", "src/", "tests/"],
    ["ruff", "format", "--check", "src/", "tests/"],
]

[tool.tox.env.fix_format]
dependency_groups = ["dev"]
commands = [
    ["ruff", "check", "--fix", "src/", "tests/"],
    ["ruff", "format", "src/", "tests/"],
]
